--- a/Football stats/in progress/sorare-api.ipynb
+++ b/Football stats/in progress/sorare-api.ipynb
@@ -14,7 +14,9 @@
     "We live in an era where data has become largely available for almost any field of study. And sports is no different. Every action a player makes is measured, and made available through extensive datasets. With all this data available, what could we use it for?\\\n",
     "We will be looking at a set of stats for Football players in Spain and France, two of the world's most important leagues. By segmenting players into clusters, we start by finding groups with similarities. The clusters might resemble the positions, Forward, Midfielder and Defender, but not all players end up in the same cluster as its position. Are some midfielders playing more like a defender? And who are the players that are most different from all the groups?\\\n",
     "The data can also be useful to discover what makes each player unique. Which are the aspects in which a player stands out from the rest?\\\n",
-    "Data doesn't replace watching the games to learn about the sport, but it is a great complement. It allows us to let go of biases, and also put into numbers intuitions one might have. Is Messi in 2022 so different from the rest? According to this data, yes, he is the player with a the most different playing style.\n"
+    "Data doesn't replace watching the games to learn about the sport, but it is a great complement. It allows us to let go of biases, and also put into numbers intuitions one might have. Is Messi in 2022 so different from the rest? According to this data, yes, he is the player with a the most different playing style.\n",
+    "\n",
+    "![SegmentLocal](Images/messi-psg.jpeg \"segment\")"
    ]
   },
   {
@@ -40,6 +42,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
+    "sns.set(style=\"whitegrid\")\n",
     "import matplotlib.pyplot as plt\n",
     "import plotly.express as px\n",
     "\n",
@@ -16525,7 +16528,6 @@
     }
    ],
    "source": [
-    "sns.set(style=\"whitegrid\")\n",
     "\n",
     "player_names=['Messi','Mbappe','Kroos','Kondogbia','Vincent Pajot','Marcos Acuña']\n",
     "player_slugs=['lionel-andres-messi-cuccittini','kylian-mbappe-lottin','toni-kroos','geoffrey-kondogbia','vincent-pajot','marcos-javier-acuna']\n",
